--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -1,141 +1,136 @@
 <!-- Start menu  -->
 <nav class="navbar navbar-fixed-top navbar-default mu-navbar">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-            <!-- Logo -->
+      <!-- Logo -->
 
-            <form class="navbar-form navbar-left">
+      <form class="navbar-form navbar-left">
 
-                <div class="input-group">
-                    <a class="navbar-brand" href="index.html">EtherDelta</a>
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" (click)="switchLanguage('en')">
-                      <i class="glyphicon" translate>En</i>
-                    </button>
-                        <button class="btn btn-default" (click)="switchLanguage('cn')">
-                      <i class="glyphicon" translate>Cn</i>
-                    </button>
-                        <!--   <button class="btn btn-default" (click)="switchLanguage('jp')">
-                      <i class="glyphicon" translate>Jp</i>
-                    </button> -->
-                    </div>
-                </div>
-            </form>
-            <!--<img src="assets/images/icon/title.png" alt="logo img">-->
+        <div class="input-group">
+          <a class="navbar-brand" href="index.html">EtherDelta</a>
+          <div class="input-group-btn">
+            <button class="btn btn-default" (click)="switchLanguage('en')">
+              <i class="glyphicon" translate>En</i>
+            </button>
+            <button class="btn btn-default" (click)="switchLanguage('cn')">
+              <i class="glyphicon" translate>Cn</i>
+            </button>
+            <!--   <button class="btn btn-default" (click)="switchLanguage('jp')">
+          <i class="glyphicon" translate>Jp</i>
+        </button> -->
+          </div>
         </div>
+      </form>
+      <!--<img src="assets/images/icon/title.png" alt="logo img">-->
+    </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav mu-menu navbar-right">
-                <li><a href="#mu-hero" translate>Home</a></li>
-                <li><a href="#mu-about" translate>About Us</a></li>
-                <li><a href="#mu-ico" translate>Token Sale</a></li>
-                <li><a href="#mu-schedule" translate>Schedule</a></li>
-                <li><a href="#mu-team" translate>Team</a></li>
-                <li><a href="#mu-advisors" translate>Advisors</a></li>
-                <li><a href="#mu-partners" translate>Partners</a></li>
-                <li><a href="/register" translate>Register</a></li>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav mu-menu navbar-right">
+        <li><a href="#mu-hero" translate>Home</a></li>
+        <li><a href="#mu-about" translate>About Us</a></li>
+        <li><a href="#mu-ico" translate>Token Sale</a></li>
+        <li><a href="#mu-schedule" translate>Schedule</a></li>
+        <li><a href="#mu-team" translate>Team</a></li>
+        <li><a href="#mu-advisors" translate>Advisors</a></li>
+        <li><a href="#mu-partners" translate>Partners</a></li>
+        <!--<li><a href="/register" translate>Register</a></li>-->
 
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+      </ul>
     </div>
     <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.navbar-collapse -->
 
-    <!-- /.container-fluid -->
+  <!-- /.container-fluid -->
 </nav>
 <!-- End menu -->
 
 <div class="mu-hero-overlay">
-    <div class="container">
-        <div class="mu-hero-area">
+  <div class="container">
+    <div class="mu-hero-area">
 
-            <!-- Start hero featured area -->
-            <div class="mu-hero-featured-area">
-                <!-- Start center Logo -->
+      <!-- Start hero featured area -->
+      <div class="mu-hero-featured-area">
+        <!-- Start center Logo -->
+        <div class="row">
+          <!--<div class="mu-logo-sm">-->
+          <!--&lt;!&ndash; text based logo &ndash;&gt;-->
+          <!---->
+          <!--&lt;!&ndash; image based logo &ndash;&gt;-->
+          <!--&lt;!&ndash; <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> &ndash;&gt;-->
+          <!--</div>-->
+          <!--</div>-->
+          <!-- End center Logo -->
+
+          <div class="mu-hero-featured-content">
+            <div class="row">
+              <div class="col-md-6">
+
+                <!--slogon-->
                 <div class="row">
-                    <!--<div class="mu-logo-sm">-->
-                    <!--&lt;!&ndash; text based logo &ndash;&gt;-->
-                    <!---->
-                    <!--&lt;!&ndash; image based logo &ndash;&gt;-->
-                    <!--&lt;!&ndash; <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> &ndash;&gt;-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!-- End center Logo -->
-
-                    <div class="mu-hero-featured-content">
-                        <div class="row">
-                            <div class="col-md-6">
-
-                                <!--slogon-->
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <img class="slogon-logo" src="assets/images/icon/edlogo.png" alt="EtherDelta">
-                                    </div>
-                                    <div class="col-md-9">
-                                        <h3>
-                                            <Strong translate>DECENTRALIZED EXCHANGE</Strong>
-                                        </h3>
-                                        <h5 translate>JOIN THE TRADING REVOLUTION</h5>
-                                    </div>
-                                </div>
-                                <!--end of slogon-->
-
-                                <!--count down-->
-                                <!--<p class="mu-event-date-line">March 01, 2018. New York, USA</p>-->
-                                <div class="mu-event-counter-area">
-                                    <div id="mu-event-counter">
-                                    </div>
-                                </div>
-                                <!--end of count down-->
-
-                                <div class="mu-hero-featured-content">
-                                    <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal " translate>
-            Whitepaper
-          </button>
-                                    <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal " (click)='gotoRegister()' translate>
-            Join Token Sale
-          </button>
-                                    <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal" (click)='gotoExchange()' translate>
-            Visit Exchange
-          </button>
-                                </div>
-
-                                <h3 id="totalRaised"></h3>
-
-                                <!--end of progress bar-->
-
-                                <!--btn array-->
-                                <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal ">
-                  Whitepaper
-                </button>
-                                <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal " (click)='gotoRegister()'>
-                  Join Token Sale
-                </button>
-                                <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal" (click)='gotoExchange()'>
-                  Visit Exchange
-                </button>
-                            </div>
-                            <!--end of btn array-->
-                        </div>
-                    </div>
+                  <div class="col-md-3">
+                    <img class="slogon-logo" src="assets/images/icon/edlogo.png" alt="EtherDelta">
+                  </div>
+                  <div class="col-md-9">
+                    <h3>
+                      <Strong translate>DECENTRALIZED EXCHANGE</Strong>
+                    </h3>
+                    <h5 translate>JOIN THE TRADING REVOLUTION</h5>
+                  </div>
                 </div>
-                <!--<div class="mu-nav-arrow-area ">-->
-                <!--<a class="mu-nav-arrow-btn" href="#mu-about">-->
-                <!--<i aria-hidden="true" class="fa fa-arrow-down"></i>-->
-                <!--</a>-->
-                <!--</div>-->
+                <!--end of slogon-->
 
+                <!--count down-->
+                <!--<p class="mu-event-date-line">March 01, 2018. New York, USA</p>-->
+                <div class="mu-event-counter-area">
+                  <h3>Token Generation Event Start In</h3>
+                  <div id="mu-event-counter">
+                  </div>
+                </div>
+
+                <!--end of count down-->
+
+                <div class="mu-hero-featured-content">
+                  <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal"
+                          data-target="#myModal " (click)='downloadWP()' translate>
+                    download Whitepaper
+                  </button>
+                  <!--<button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal"-->
+                          <!--data-target="#myModal " (click)='gotoRegister()' translate>-->
+                    <!--Join Token Sale-->
+                  <!--</button>-->
+                  <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal"
+                          data-target="#myModal" (click)='gotoExchange()' translate>
+                    Visit Exchange
+                  </button>
+                </div>
+
+                <!--<h3 id="totalRaised"></h3>-->
+
+                <!--end of progress bar-->
+              </div>
+              <!--end of btn array-->
             </div>
-            <!-- End hero featured area -->
-            <!--<particles [params]="myParams" [style]="myStyle" [width]="width" [height]="height"></particles>-->
+          </div>
         </div>
+        <!--<div class="mu-nav-arrow-area ">-->
+        <!--<a class="mu-nav-arrow-btn" href="#mu-about">-->
+        <!--<i aria-hidden="true" class="fa fa-arrow-down"></i>-->
+        <!--</a>-->
+        <!--</div>-->
 
+      </div>
+      <!-- End hero featured area -->
+      <!--<particles [params]="myParams" [style]="myStyle" [width]="width" [height]="height"></particles>-->
     </div>
+
+  </div>
