--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,8 +21,8 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <!--<div id="chartContainer" style="height: 300px; width: 100%;"></div>-->
-                        <canvas id="myChart" width="400" height="400"></canvas>
+                        <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+                        <!--<canvas id="Chart-3" width="400" height="400"></canvas>-->
                     </div>
 
                 </div>
@@ -104,30 +104,30 @@
     <!-- End About -->
 
     <!-- Start Video -->
-    <section id="mu-video">
-        <div class="mu-video-overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="mu-video-area">
-                            <h2 translate>Watch Video</h2>
-                            <a class="mu-video-play-btn" href="#"><i class="fa fa-play" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!--<section id="mu-video">-->
+        <!--<div class="mu-video-overlay">-->
+            <!--<div class="container">-->
+                <!--<div class="row">-->
+                    <!--<div class="col-md-12">-->
+                        <!--<div class="mu-video-area">-->
+                            <!--<h2 translate>Watch Video</h2>-->
+                            <!--<a class="mu-video-play-btn" href="#"><i class="fa fa-play" aria-hidden="true"></i></a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
-        <!-- Start Video content -->
-        <div class="mu-video-content">
-            <div class="mu-video-iframe-area">
-                <a class="mu-video-close-btn" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-                <!--<iframe width="854" height="480" src="https://www.youtube.com/watch?v=d3MfUozeXiI" frameborder="0" allowfullscreen></iframe>-->
-            </div>
-        </div>
-        <!-- End Video content -->
+        <!--&lt;!&ndash; Start Video content &ndash;&gt;-->
+        <!--<div class="mu-video-content">-->
+            <!--<div class="mu-video-iframe-area">-->
+                <!--<a class="mu-video-close-btn" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>-->
+                <!--&lt;!&ndash;<iframe width="854" height="480" src="https://www.youtube.com/watch?v=d3MfUozeXiI" frameborder="0" allowfullscreen></iframe>&ndash;&gt;-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; End Video content &ndash;&gt;-->
 
-    </section>
+    <!--</section>-->
     <!-- End Video -->
 
 
