--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
 <router-outlet></router-outlet>
+<nav class="fab-container">
+
+    <a href="#" class="fab-buttons" tooltip="Google+"></a>
+
+    <a href="#" class="fab-buttons" tooltip="Twitter"></a>
+
+    <a href="#" class="fab-buttons" tooltip="Facebook"></a>
+
+    <a class="fab-buttons" tooltip="Share" href="#"></a>
+
+</nav>
