--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -460,8 +460,6 @@
                             </div>
                         </div>
                         <!-- End team Content -->
-
-
                     </div>
                 </div>
             </div>
@@ -472,7 +470,7 @@
     <section id="mu-partners">
         <div class="container">
             <div class="mu-title-area">
-                <h2 class="mu-title" translate>partners</h2>
+                <h2 class="mu-title" translate></h2>
             </div>
             <div class="row">
                 <div class="mu-partners-content">
@@ -480,7 +478,7 @@
                         <img class="center-block" src="assets/images/parterner/metamask_logo.png" alt="metamask_logo">
                     </div>
                     <div class="col-md-3">
-                        <img class="center-block" src="assets/images/parterner/firstblood_logo.png" alt="first_blood_logo">
+                        <img class="center-block" src="assets/images/parterner/weilai_logo.png" alt="weilai_logo">
                     </div>
                     <div class="col-md-3">
                         <img class="center-block" src="assets/images/parterner/jinniucn_logo.png" alt="jinniucn_logo">
@@ -492,16 +490,16 @@
             </div>
             <div class="row">
                 <div class="mu-parterner-content">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png" alt="blockchainfiniancial_logo">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <img class="center-block" src="assets/images/parterner/loci_logo.png" alt="loci_logo">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <img class="center-block" src="assets/images/parterner/sprite_logo.png" alt="sprite_logo">
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-6">
                         <img class="center-block" src="assets/images/parterner/icorating_logo.png" alt="ico_rating_logo">
                     </div>
                 </div>
