language bar fized, white paper version link

--- a/src/app/app-navbar/app-navbar.component.css
+++ b/src/app/app-navbar/app-navbar.component.css
@@ -1,5 +1,6 @@
 @import "~assets/css/theme-color/jelly-bean-theme.css";
 @import "~assets/css/animates.css";
+@import "~assets/css/icon.css";
 .dot {
     border: 10px solid #ffffff;
     background: transparent;
@@ -25,6 +26,7 @@ a.navbar-brand {
     height: 50px;
     padding: 0;
 }
+
 
 /* ARROW */
 
