--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,16 +14,9 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-<<<<<<< Updated upstream
-                                <p translate>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.
-                                </p>
-                                <p translate> We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
-=======
-                                <h6>
-                                    <p>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.</p>
-                                    <p>We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
-                                </h6>
->>>>>>> Stashed changes
+                                <p>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.</p>
+                                <p translate>We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
+
                             </div>
                         </div>
                     </div>
@@ -112,27 +105,27 @@
 
     <!-- Start Video -->
     <!--<section id="mu-video">-->
-        <!--<div class="mu-video-overlay">-->
-            <!--<div class="container">-->
-                <!--<div class="row">-->
-                    <!--<div class="col-md-12">-->
-                        <!--<div class="mu-video-area">-->
-                            <!--<h2 translate>Watch Video</h2>-->
-                            <!--<a class="mu-video-play-btn" href="#"><i class="fa fa-play" aria-hidden="true"></i></a>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--<div class="mu-video-overlay">-->
+    <!--<div class="container">-->
+    <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+    <!--<div class="mu-video-area">-->
+    <!--<h2 translate>Watch Video</h2>-->
+    <!--<a class="mu-video-play-btn" href="#"><i class="fa fa-play" aria-hidden="true"></i></a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 
-        <!--&lt;!&ndash; Start Video content &ndash;&gt;-->
-        <!--<div class="mu-video-content">-->
-            <!--<div class="mu-video-iframe-area">-->
-                <!--<a class="mu-video-close-btn" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>-->
-                <!--&lt;!&ndash;<iframe width="854" height="480" src="https://www.youtube.com/watch?v=d3MfUozeXiI" frameborder="0" allowfullscreen></iframe>&ndash;&gt;-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--&lt;!&ndash; End Video content &ndash;&gt;-->
+    <!--&lt;!&ndash; Start Video content &ndash;&gt;-->
+    <!--<div class="mu-video-content">-->
+    <!--<div class="mu-video-iframe-area">-->
+    <!--<a class="mu-video-close-btn" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>-->
+    <!--&lt;!&ndash;<iframe width="854" height="480" src="https://www.youtube.com/watch?v=d3MfUozeXiI" frameborder="0" allowfullscreen></iframe>&ndash;&gt;-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; End Video content &ndash;&gt;-->
 
     <!--</section>-->
     <!-- End Video -->
@@ -408,7 +401,7 @@
 
                         <div class="mu-title-area">
                             <h2 class="mu-title" translate>Advisors</h2>
-                            <p translate>Strong aivosr team in block chain world</p>
+                            <p translate>Strong advisor team in blockchain world</p>
                         </div>
 
                         <!-- Start team Content -->
