Translation for en, cn completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,10 +12,15 @@
                         <div class="col-md-8 col-md-offset-2 mu-sm-title-area">
                             <img class="center-block logo-img" src="assets/images/icon/title.png" alt="EtherDelta">
                         </div>
+
                         <div class="row">
                             <div class="col-md-12">
-                                <p>As an open, multilateral trading platform that supports ERC20 tokens and smart contracts. It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.</p>
-                                <p translate>We have positioned this platform as a future standard and an industry infrastructure that features the next generation of digital asset exchange.</p>
+                                <ul>
+                                    <li translate>As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.</li>
+                                    <li translate>It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.</li>
+
+                                    <li translate>We have positioned this platform as a future standard and an industry infrastruture that features the next generation of digital asset exhange.</li>
+                                </ul>
 
                             </div>
                         </div>
@@ -139,7 +144,7 @@
                 <div class="col-md-12">
                     <div class="mu-ico-area">
                         <div class="mu-title-area">
-                            <h2 class="mu-title" translate>Tokens Sale</h2>
+                            <h2 class="mu-title" translate>Token Sale</h2>
                         </div>
                         <div class="">
 
@@ -322,7 +327,7 @@
 
                         <div class="mu-title-area">
                             <h2 class="mu-title" translate>Team</h2>
-                            <p translate>All star team with experts in blockchain, technology, legal, finance and marketing.</p>
+                            <p translate>All star team with experts in blockchain & technology & finance and marketing.</p>
                         </div>
 
                         <!-- Start team Content -->
