--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -26,7 +26,7 @@
                 <li><a href="#mu-advisors" translate>Advisors</a></li>
                 <li><a href="#mu-partners" translate>Partners</a></li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="" translate>
+                    <a class="dropdown-toggle" data-toggle="dropdown" translate>
                         <i class="fa fa-globe"></i>Language
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu" style="list-style:none">
@@ -87,12 +87,12 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <h3><strong>DECENTRALIZED EXCHANGE</strong></h3>
+                                            <h3><strong translate>DECENTRALIZED EXCHANGE</strong></h3>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-12">
-                                            <h3>Token Generation Event Start In</h3>
+                                            <h3 translate>Token Generation Event Start In</h3>
                                         </div>
                                     </div>
                                     <div class="row">
