--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ ul {
 }
 
 ul li {
-    list-style: disc;
+    list-style: none;
     font-size: 17px;
     line-height: 1.59;
 }
@@ -821,7 +821,7 @@ button:focus {
 /*--------------------*/
 
 #mu-team {
-    background-color: rgba(51, 51, 51, 0.7);
+    /* background-color: rgba(51, 51, 51, 0.7); */
     display: inline;
     float: left;
     width: 100%;
@@ -1599,6 +1599,7 @@ button:focus {
     display: inline;
     float: left;
     width: 100%;
+    color: #fff;
 }
 
 .mu-footer-area {
@@ -1607,6 +1608,10 @@ button:focus {
     padding: 30px 0;
     text-align: center;
     width: 100%;
+}
+
+.mu-footer-area a {
+    color: #fff;
 }
 
 .mu-footer-top {
