vertical social media bar fixed

--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -56,11 +56,16 @@
                 <i class="fa fa-twitter"></i>
             </a>
         </li>
-        <li><a href="https://www.facebook.com/MolecularFuture/"><i class="fa fa-facebook"></i></a></li>
-        <li class="wechat"><a><i class="fa fa-wechat"></i></a></li>
+        <li>
+            <a href="https://t.me/joinchat/FNAeBUjZxQW9TYATXDmDUA">
+                <i class="fa fa-paper-plane"></i>
+            </a>
+        </li>
+        <li class="wechat"><a><i class="fa fa-wechat"></i>
         <div class="wechatCord">
-            <img src="ico/image/wechatCord.jpg" alt="" style="width:100px;">
-        </div>
+            <img src="assets/images/wechatqr.jpg" alt="" style="width:100px;">
+        </div></a></li>
+
     </ul>
 </div>
 
