--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,8 +26,10 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+                        <!--<div id="chartContainer" style="height: 300px; width: 100%;"></div>-->
                         <!--<canvas id="Chart-3" width="400" height="400"></canvas>-->
+                      <img src="assets/images/linechart.png" class="center-block" alt="transaction">
+
                     </div>
 
                 </div>
