--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -52,12 +52,12 @@
 <div class="side-nav-bar">
     <ul class="side-nav-bar-ul">
         <li>
-            <a href="https://twitter.com/etherdelta">
+            <a href="https://twitter.com/etherdelta" target="_blank">
                 <i class="fa fa-twitter"></i>
             </a>
         </li>
         <li>
-            <a href="https://t.me/joinchat/FNAeBUjZxQW9TYATXDmDUA">
+            <a href="https://t.me/joinchat/FNAeBUjZxQW9TYATXDmDUA" target="_blank">
                 <i class="fa fa-paper-plane"></i>
             </a>
         </li>
