--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,8 +18,7 @@
                                 <ul>
                                     <li translate>As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.</li>
                                     <li translate>It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.</li>
-
-                                    <li translate>We have positioned this platform as a future standard and an industry infrastruture that features the next generation of digital asset exhange.</li>
+                                    <li translate>It is a decentralized trading platform that does not involve any centralize</li>
                                 </ul>
 
                             </div>
@@ -184,9 +183,9 @@
                                 <div class="col-md-4 col-md-offset-1">
                                     <h3 class="mu-title" translate>Token Distribution</h3>
                                     <ul data-pie-id="my-cool-chart" data-options=''>
-                                        <li data-value="10">150,000,000 Team Reserved 1 year (10%)</li>
-                                        <li data-value="40">600,000,000 Private-Sale (40%)</li>
-                                        <li data-value="50">750,000,000 Token Generation Event (50%)</li>
+                                        <li data-value="10" translate>150,000,000 Team Reserved 1 year (10%)</li>
+                                        <li data-value="40" translate>600,000,000 Private-Sale (40%)</li>
+                                        <li data-value="50" translate>750,000,000 Token Generation Event (50%)</li>
                                     </ul>
                                 </div>
                             </div>
@@ -226,7 +225,7 @@
                         </div>
                         <div class="col-md-9">
                             <h6 translate>Mobile Platform</h6>
-                            <p translate>Development new generation exchnage on virable of platform inlcuding IOS and Android</p>
+                            <p translate>Development new generation exchange multiple of platform including IOS and Android</p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +249,7 @@
                         </div>
                         <div class="col-md-9">
                             <h6 translate>EtherDelta Lab 51</h6>
-                            <p translate>EtherDelta will lanuch Lab 51 to incubate new inovation in finiance, technology, security and etc</p>
+                            <p translate>EtherDelta will launch Lab 51 to incubate new innovation in finance, technology and security</p>
                         </div>
                     </div>
                 </div>
@@ -261,7 +260,7 @@
                         </div>
                         <div class="col-md-9">
                             <h6 translate>New Wallet</h6>
-                            <p translate>Next Generation wallet with embeded coin exchange feature</p>
+                            <p translate>Next Generation wallet with coin exchange feature</p>
                         </div>
                     </div>
                 </div>
