--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -1,122 +1,130 @@
 <!-- Start menu  -->
 <nav class="navbar navbar-fixed-top navbar-default mu-navbar">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-            <!-- Logo -->
-            <a class="navbar-brand" href="index.html">EtherDelta</a>
+      <!-- Logo -->
+      <a class="navbar-brand" href="index.html">EtherDelta</a>
 
-            <!--<img src="assets/images/icon/title.png" alt="logo img">-->
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav mu-menu navbar-right" style="list-style:none">
-                <li><a href="#mu-hero" translate>Home</a></li>
-                <li><a href="#mu-about" translate>About Us</a></li>
-                <li><a href="#mu-ico" translate>Token Sale</a></li>
-                <li><a href="#mu-schedule" translate>Schedule</a></li>
-                <li><a href="#mu-team" translate>Team</a></li>
-                <li><a href="#mu-advisors" translate>Advisors</a></li>
-                <li><a href="#mu-partners" translate>Partners</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" translate>
-                        <i class="fa fa-globe"></i>Language
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu" style="list-style:none">
-                        <li>
-                            <a role="button" (click)="switchLanguageEn()">English</a>
-                        </li>
-                        <li><a role="button" (click)="switchLanguageCn()">中文</a></li>
-
-                    </ul>
-                </li>
-                <!--<li><a href="/register" translate>Register</a></li>-->
-
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+      <!--<img src="assets/images/icon/title.png" alt="logo img">-->
     </div>
-    <!-- /.navbar-collapse -->
 
-    <!-- /.container-fluid -->
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav mu-menu navbar-right" style="list-style:none">
+        <li><a href="#mu-hero" translate>Home</a></li>
+        <li><a href="#mu-about" translate>About Us</a></li>
+        <li><a href="#mu-ico" translate>Token Sale</a></li>
+        <li><a href="#mu-schedule" translate>Schedule</a></li>
+        <li><a href="#mu-team" translate>Team</a></li>
+        <li><a href="#mu-advisors" translate>Advisors</a></li>
+        <li><a href="#mu-partners" translate>Partners</a></li>
+
+        <!--<li><a href="/register" translate>Register</a></li>-->
+
+      </ul>
+    </div>
+
+    <li class="collapse navbar-collapse">
+      <a class="dropdown-toggle" data-toggle="dropdown" translate>
+        <i class="fa fa-globe"></i>Language
+        <span class="caret"></span></a>
+      <ul class="dropdown-menu" style="list-style:none">
+        <li>
+          <a role="button" (click)="switchLanguageEn()">English</a>
+        </li>
+        <li><a role="button" (click)="switchLanguageCn()">中文</a></li>
+
+      </ul>
+    </li>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.navbar-collapse -->
+
+  <!-- /.container-fluid -->
 </nav>
 <!-- End menu -->
 
 <div class="side-nav-bar">
-    <ul class="side-nav-bar-ul">
-        <li>
-            <a href="https://twitter.com/etherdelta" target="_blank">
-                <i class="fa fa-twitter"></i>
-            </a>
-        </li>
-        <li>
-            <a href="https://t.me/joinchat/FNAeBUjZxQW9TYATXDmDUA" target="_blank">
-                <i class="fa fa-paper-plane"></i>
-            </a>
-        </li>
-        <li class="wechat"><a><i class="fa fa-wechat"></i>
-        <div class="wechatCord">
-            <img src="assets/images/wechatqr.jpg" alt="" style="width:100px;">
-        </div></a></li>
+  <ul class="side-nav-bar-ul">
+    <li>
+      <a href="https://twitter.com/etherdelta" target="_blank">
+        <i class="fa fa-twitter"></i>
+      </a>
+    </li>
+    <li>
+      <a href="https://t.me/joinchat/FNAeBUjZxQW9TYATXDmDUA" target="_blank">
+        <i class="fa fa-paper-plane"></i>
+      </a>
+    </li>
+    <li class="wechat"><a><i class="fa fa-wechat"></i>
+      <div class="wechatCord">
+        <img src="assets/images/wechatqr.jpg" alt="" style="width:100px;">
+      </div>
+    </a></li>
 
-    </ul>
+  </ul>
 </div>
 
 <div class="mu-hero-overlay">
-    <div class="container">
-        <div class="mu-hero-area">
+  <div class="container">
+    <div class="mu-hero-area">
 
-            <!-- Start hero featured area -->
-            <div class="mu-hero-featured-area">
-                <!-- Start center Logo -->
-                <div class="row">
+      <!-- Start hero featured area -->
+      <div class="mu-hero-featured-area">
+        <!-- Start center Logo -->
+        <div class="row">
 
-                    <div class="">
-                        <div class="row">
-                            <div class="col-md-6">
+          <div class="">
+            <div class="row">
+              <div class="col-md-6">
 
-                                <!--slogon-->
-                                <div class="mu-hero-featured-content">
-                                    <div class="row">
-                                        <div class="col-md-4 col-md-offset-4">
-                                            <img class="slogon-logo" src="assets/images/icon/edlogo.png" alt="EtherDelta">
-                                        </div>
-
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <h3><strong translate>DECENTRALIZED EXCHANGE</strong></h3>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <h3 translate>Token Generation Event Start In</h3>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div id="mu-event-counter">
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal " (click)='downloadWP()' translate>Whitepaper</button>
-
-                                        <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal" (click)='gotoExchange()' translate>Visit Exchange</button>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-
-
+                <!--slogon-->
+                <div class="mu-hero-featured-content">
+                  <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                      <img class="slogon-logo" src="assets/images/icon/edlogo.png" alt="EtherDelta">
                     </div>
+
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h3><strong translate>DECENTRALIZED EXCHANGE</strong></h3>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <h3 translate>Token Generation Event Start In</h3>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div id="mu-event-counter">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal"
+                            data-target="#myModal " (click)='downloadWP()' translate>Whitepaper
+                    </button>
+
+                    <button translate type=" button" class="btn btn-lg btn-primary" data-toggle="modal"
+                            data-target="#myModal" (click)='gotoExchange()' translate>Visit Exchange
+                    </button>
+                  </div>
                 </div>
 
+              </div>
             </div>
+
+
+          </div>
         </div>
+
+      </div>
+    </div>
