--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -3,20 +3,35 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="true">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
             <!-- Logo -->
-            <a class="navbar-brand" href="index.html">EtherDelta</a>
+            <a class="navbar-brand navbar-light bg-light" href="index.html"><img src="assets/images/icon/title.png" width="175px" class="d-inline-block align-top" alt="logo img"></a>
 
             <!--<img src="assets/images/icon/title.png" alt="logo img">-->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+            <ul class="nav navbar-nav mu-menu navbar-left">
+                <li class="nav-item  dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" id="navbarDropdown" href="#!" role="button" aria-haspopup="true" aria-expanded="true">
+                        <i class="fa fa-globe"></i>
+                        <span class="caret"></span></a>
+
+                    <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                        <a class="dropdown-toggle" role="button" data-toggle="collapse" (click)="switchLanguageEn()"><span><img id="img-enlang" src="assets/images/icon/enlang-icon.png"/></span>EN</a>
+                        <a class="dropdown-toggle" role="button" data-toggle="collapse" (click)="switchLanguageCn()"><span><img id="img-cnlang" src="assets/images/icon/cn-lang.png"/></span>中文</a>
+                    </div>
+
+                </li>
+            </ul>
+
             <ul class="nav navbar-nav mu-menu navbar-right" style="list-style:none">
                 <li><a href="#mu-hero" translate>Home</a></li>
                 <li><a href="#mu-about" translate>About Us</a></li>
@@ -25,20 +40,20 @@
                 <li><a href="#mu-team" translate>Team</a></li>
                 <li><a href="#mu-advisors" translate>Advisors</a></li>
                 <li><a href="#mu-partners" translate>Partners</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" translate>
-                        <i class="fa fa-globe"></i>Language
-                        <span class="caret"></span></a>
-                    <ul class="dropdown-menu" style="list-style:none">
-                        <li>
-                            <a role="button" (click)="switchLanguageEn()">English</a>
-                        </li>
-                        <li><a role="button" (click)="switchLanguageCn()">中文</a></li>
 
-                    </ul>
-                </li>
+
                 <!--<li><a href="/register" translate>Register</a></li>-->
+                <!--<li class="nav-item  dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" id="navbarDropdown" href="#!" role="button" aria-haspopup="true" aria-expanded="true">
+                        <i class="fa fa-globe"></i>
+                        <span class="caret"></span></a>
 
+                    <div class="dropdown-menu " aria-labelledby="navbarDropdown">
+                        <a role="button" (click)="switchLanguageEn()"><span><img id="img-enlang" src="assets/images/icon/enlang-icon.png"/></span>EN</a>
+                        <a role="button" (click)="switchLanguageCn()"><span><img id="img-cnlang" src="assets/images/icon/cn-lang.png"/></span>中文</a>
+                    </div>
+
+                </li>-->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
