--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
                     <div class="col-md-6">
                         <!--<div id="chartContainer" style="height: 300px; width: 100%;"></div>-->
                         <!--<canvas id="Chart-3" width="400" height="400"></canvas>-->
-                      <img src="assets/images/linechart.png" class="center-block" alt="transaction">
+                        <img src="assets/images/linechart.png" class="center-block" alt="transaction">
 
                     </div>
 
@@ -78,7 +78,7 @@
                         </div>
                         <div class="col-md-8">
                             <h6 translate>Trust</h6>
-                            <p translate>Low trust and operational costs</p>
+                            <p translate>Low credit and operational costs</p>
                         </div>
                     </div>
                 </div>
@@ -414,7 +414,7 @@
                         <div class="mu-team-content">
 
                             <div class="row">
-                               <!-- Start single speaker -->
+                                <!-- Start single speaker -->
                                 <div class="col-md-4">
                                     <div class="mu-single-team">
                                         <img src="assets/images/PROFILE_JIAWEI.jpg" class="img-circle profile-img" alt="speaker img">
@@ -473,7 +473,7 @@
                         <img class="center-block" src="assets/images/parterner/wenyuecapital_logo.png" alt="wenyuecapital_logo">
                     </div>
                     <div class="col-md-3 col-sm-6">
-                      <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png" alt="blockchainfiniancial_logo">
+                        <img class="center-block" src="assets/images/parterner/blockchainfiniancial_logo.png" alt="blockchainfiniancial_logo">
                     </div>
                 </div>
             </div>
