--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,34 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#!" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-
 <main role="main">
 
     <section id="mu-login">
@@ -37,7 +6,7 @@
 
                 <div class="col-md-12 col-xs-12" align="center">
                     <div class="line">
-                        <h2><span>Registration</span></h2>
+                        <h2><span>EtherDalta Token Event Registration</span></h2>
                     </div>
                     <div class="wrapper"><img src="assets/images/logo.jpg" class="img-circle" /></div>
 
@@ -50,8 +19,7 @@
                         </div>
                         <div class="control" *ngIf="email.errors && (email.dirty || email.touched) ">
                             <div class="form-group error">
-                                <span *ngIf="email.errors.required">Email is required</span>
-                                <span *ngIf="email.errors.pattern">The email address must contain at least the @ character</span>
+                                <span [hidden]="!email.errors">Invalid email address</span>
                             </div>
                         </div>
                         <div class="control">
@@ -59,21 +27,24 @@
                         </div>
                         <div class="control" *ngIf="password.errors && (password.dirty || password.touched) ">
                             <div class="form-group error ">
-                                <span *ngIf="password.errors.required">Password is required.</span>
-                                <span *ngIf="password.errors.pattern">Password must be include at least one letter and one number.</span>
-                                <span *ngIf="password.errors.minlength">Password must be 6 characters long, we need another {{password.errors.minlength.requiredLength - password.errors.minlength.actualLength}} characters </span>
+                                <span [hidden]="!password.errors.required">Password is required.</span>
+                                <span [hidden]="!password.errors.pattern">Password must be include at least one letter and one number.</span>
+                                <span [hidden]="!password.errors.minlength">Password must be 6 characters long, we need another {{password.errors.minlength.requiredLength - password.errors.minlength.actualLength}} characters </span>
                             </div>
                         </div>
                         <div class="line"></div>
                         <div class="control">
                             <div class="form-group">
-                                <label class="label">Terms and conditions</label>
-                                <div style="border: 1px solid #e5e5e5; height: 200px; overflow: auto; padding: 10px;">
-                                    <p>Please confirm that you are NOT a citizen of or resident of the People's Republic of China or an entity formed under the laws of the People's Republic of China (each a &quot;Chinese Person&quot;) nor are you purchasing
-                                        Etherdelta Tokens or signing on behalf of a Chinese Person. </p>
-                                    <p>Confirm that you are not a United States citizen, resident or green card holder, or have a primary residence or domicile in the United States, including Puerto Rico, the U.S. Virgin Islands or any other territories
-                                        of the United States and are not purchasing Etherdelta tokens or signing on behalf of a United States citizen, resident or entity.</p>
+                                <label class="label">Terms & Agreement</label>
+                                <div *ngIf="isLoaded" style="text-align: center;">
+                                    <button class="btn btn-primary-outline" (click)="prevPage()" [disabled]="page === 1">Prev</button>
+                                    <span>{{ page }} / {{ totalPages }}</span>
+                                    <button class="btn btn-primary-outline" (click)="nextPage()" [disabled]="page === totalPages">Next</button>
+                                </div>
 
+                                <div style="border: 1px solid #e5e5e5; height: 450px; overflow: scroll; padding: 1px;text-align: center;">
+                                    <pdf-viewer src="assets/whitepaper/Term_Agreement.pdf" [show-all]="false" [page]="page" [zoom]="zoom" [fit-to-page]="true" [autoresize]="true" (after-load-complete)="afterLoadComplete($event)">
+                                    </pdf-viewer>
 
                                 </div>
                             </div>
